# stock-portfolio-analyzer

docs/superpowers/plans/: 2026-06-01-stock-analyst-agent.md
stock-analyst-agent/: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  token_estimate.md
stock-analyst-agent/tests/: conftest.py  test_calculations.py  test_watchlist.py
