[project]
name = "stock-analyst-agent"
version = "0.1.0"
description = "AI-powered personal stock portfolio analyst"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.35.0",
    "yfinance>=0.2.40",
    "groq>=0.9.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
